# nogos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  board.c  board.h  context.c  context.h  lobby.c  lobby.h  log.h  main.c  message.h  message_queue.c  message_queue.h  player.c  player.h  protocol.c  protocol.h  queue.c  queue.h
test/: CMakeLists.txt  task.h  test_board.c  test_context.c  test_lobby.c  test_message_queue.c  test_protocol.c  test_queue.c
